packages/typ/tests/fixtures/diagnostics/0125_adt_constructor_int_arg_mismatch_01.ml.infer.expected
File "0125_adt_constructor_int_arg_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0125_adt_constructor_int_arg_mismatch_01 is not a valid module name.

File "0125_adt_constructor_int_arg_mismatch_01.ml", line 2, characters 10-14:
2 | let _ = I true
              ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
